update my project
add detail for responsive size /
fix README

--- a/my_project/Dr_K/html/index.html
+++ b/my_project/Dr_K/html/index.html
@@ -57,11 +57,11 @@
         <div class="nav-box2">
           <div class="lists">
             <div class="nav-list tog-li">소개</div>
-            <div class="spacer"></div>
+            <div class="spacer tog-sp"></div>
             <div class="nav-list tog-li">제품 정보</div>
-            <div class="spacer"></div>
+            <div class="spacer tog-sp"></div>
             <div class="nav-list tog-li">연구 성과</div>
-            <div class="spacer"></div>
+            <div class="spacer tog-sp"></div>
             <div class="nav-list tog-li">QnA</div>
           </div>
         </div>
@@ -168,7 +168,7 @@
             <p
               data-aos="fade-down"
               data-aos-duration="500"
-              data-aos-delay="300"
+              data-aos-delay="150"
             >
               1000조 원 규모의 글로벌 케미컬 의약품 시장을 개척하며 미래 성장을
               새로운 동력을 불어넣고 있습니다
@@ -176,7 +176,7 @@
             <p
               data-aos="fade-down"
               data-aos-duration="500"
-              data-aos-delay="600"
+              data-aos-delay="300"
             >
               다년간 쌓인 R&D 데이터는 안정성을 더욱 높이며 글로벌 제약의 선두에
               설 수 있는 기반을 마련합니다
@@ -187,7 +187,7 @@
     </section>
 
     <!-- product section -->
-    <section class="product" data-aos="fade-down" data-aos-duration="1000">
+    <section class="product">
       <div class="op-box">
         <div class="inner">
           <h2>Production</h2>
@@ -289,7 +289,7 @@
     <!-- R&D section -->
     <section class="rnd">
       <div class="op-box">
-        <div class="inner">
+        <div class="inner2">
           <h2 data-aos="fade-down" data-aos-duration="700">
             Research and Develope
           </h2>
@@ -348,7 +348,7 @@
     <!-- CEO comment section -->
     <section class="CEO">
       <div class="op-box">
-        <div class="inner">
+        <div class="inner2">
           <h2 data-aos="fade-left" data-aos-duration="700">
             Motivation & Innovation
           </h2>
@@ -409,7 +409,7 @@
             data-aos-duration="700"
             data-aos-anchor=".CEO h2"
             data-aos-delay="1000"
-            style="font-size: 3.5vw"
+            style="font-size: 2.3vw"
           >
             항상 여러분과 함께 하는 Dr.K 가 되겠습니다.
           </p>
@@ -419,7 +419,7 @@
 
     <!-- community section -->
     <section
-      class="community inner"
+      class="community inner2"
       data-aos="fade-down"
       data-aos-duration="700"
     >
