--- a/my_project/anywhere/html/index.html
+++ b/my_project/anywhere/html/index.html
@@ -162,8 +162,8 @@
             <script>
               var swiper = new Swiper(".mSwiper", {
                 loop: true,
-                slidesPerView: 3,
-                slidesPerGroup: 1,
+                slidesPerView: 4,
+                slidesPerGroup: 2,
                 spaceBetween: 15,
                 observer: true,
                 observeParents: true,
@@ -172,10 +172,8 @@
                   disableOnInteraction: false,
                 },
                 breakpoints: {
-                  600: {
-                    slidesPerView: 4,
+                  768: {
                     spaceBetween: 30,
-                    slidesPerGroup: 2,
                   },
                 },
               });
@@ -250,7 +248,7 @@
       <div class="menu-wrapper">
         <div class="inner-box inner-right">
           <div class="menu" data-aos="fade-up" data-aos-offset="-100">
-            <h2>바로 배송~ 중국집 메뉴</h2>
+            <h2>바로 배송 중국집 메뉴</h2>
             <div class="container">
               <div class="item">
                 <div class="food-img img7"></div>
