updatae my project
add detail for responsive size

--- a/my_project/Dr_K/html/index.html
+++ b/my_project/Dr_K/html/index.html
@@ -236,7 +236,10 @@
                 <div class="text-box">
                   <div>
                     <h3>Go-Juice</h3>
-                    <p>강력한 각성 효과를 부여해줍니다.</p>
+                    <p>
+                      강력한 각성 효과를 부여해줍니다. 순간적인 긴장이
+                      필요하거나 응급 상황에 유용하게 사용할 수 있습니다.
+                    </p>
                     <p>
                       각성 효과 이후 무기력함, 의존성 등의 부작용이 없습니다.
                     </p>
@@ -262,7 +265,10 @@
                   <div>
                     <h3>Yeyo</h3>
                     <p>우울증 환자를 위한 항우울제 입니다.</p>
-                    <p>몸을 이완시켜주고 엔돌핀 수용체를 활성화합니다.</p>
+                    <p>
+                      몸을 이완시켜주고 엔돌핀 생산량과 엔돌핀 수용체를
+                      활성화합니다.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -273,8 +279,9 @@
                     <h3>Ambrosia</h3>
                     <p>하루 섭취량의 미네랄, 비타민을 가진 영양제입니다.</p>
                     <p>
-                      복용자의 건강 상태에 따라 식욕을 조절하는 호르몬을
-                      통제합니다.
+                      복용자의 체지방량에 따라 식욕을 조절하는 호르몬을
+                      통제합니다. 초소형 나노소자가 혈액을 스캔하여 현재
+                      영양상태를 진단해줍니다.
                     </p>
                   </div>
                 </div>
@@ -405,11 +412,11 @@
             다양한 의료 지원 서비스를 꾸준히 진행하겠습니다
           </p>
           <p
+            class="last-com"
             data-aos="fade-left"
             data-aos-duration="700"
             data-aos-anchor=".CEO h2"
             data-aos-delay="1000"
-            style="font-size: 2.3vw"
           >
             항상 여러분과 함께 하는 Dr.K 가 되겠습니다.
           </p>
