update header in my portfolio

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="../css/nav.css" />
     <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/info.css" />
     <link rel="stylesheet" href="../css/main.css" />
 
     <!-- JQuery link -->
@@ -38,39 +39,58 @@
         <ul class="nav">
           <li class="nav-item">
             <a class="nav-link active" href="#scrollspyHeading1">
-              <div class="nav-shape"></div>
-              <p>Header</p>
+              <div class="nav-shape color1"></div>
+              <p style="color: white">Header</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading2"
-              ><div class="nav-shape"></div>
-              <p>Header</p></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#scrollspyHeading3"
-              ><div class="nav-shape"></div>
+              ><div class="nav-shape color2"></div>
               <p>Info</p></a
             >
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading3"
+              ><div class="nav-shape color3"></div>
+              <p>Mind-Set</p></a
+            >
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading4"
-              ><div class="nav-shape"></div>
-              <p>a</p></a
+              ><div class="nav-shape color4"></div>
+              <p>Skill</p></a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading5"
-              ><div class="nav-shape"></div>
-              <p>Header</p></a
+              ><div class="nav-shape color1"></div>
+              <p>Portfolio #1</p></a
             >
           </li>
         </ul>
       </nav>
 
+      <!-- header -->
       <section id="scrollspyHeading1" class="header area flex-row">
-        <h1>hello</h1>
+        <div class="header-nav">
+          <h2>KKH's WEB portfolio</h2>
+          <div class="ani-block ani1"></div>
+          <div class="ani-block ani2"></div>
+          <div class="ani-block ani3"></div>
+          <!-- <div class="ani-block ani4"></div>
+          <div class="ani-block ani5"></div> -->
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Passion</li>
+            <li>Portfolio</li>
+          </ul>
+        </div>
+        <div class="text-box">
+          <h2><span>L</span>og<span>i</span>c.</h2>
+          <h2>Modu<span>l</span>ar<span>i</span>ze.</h2>
+          <h2>Open M<span>i</span>nd.</h2>
+        </div>
         <ul class="circles">
           <li></li>
           <li></li>
@@ -85,10 +105,29 @@
         </ul>
       </section>
 
-      <section id="scrollspyHeading2"></section>
-      <section id="scrollspyHeading3"></section>
-      <section id="scrollspyHeading4"></section>
-      <section id="scrollspyHeading5"></section>
+      <!-- info -->
+      <section id="scrollspyHeading2" class="info">
+        <div class="inner">
+          <div class="inner-box left-top">
+            <div class="text-box">
+              <h2>Kim Gyeong Hyun</h2>
+              <p>코딩을 프로그램을 창조하는 수단이라고 하지만</p>
+              <p></p>
+            </div>
+          </div>
+          <div class="inner-box right-top">
+            <div class="ani-box ani1"></div>
+            <div class="ani-box ani2"></div>
+            <div class="ani-box ani3"></div>
+          </div>
+          <div class="inner-box left-bottom"></div>
+          <div class="inner-box right-bottom"></div>
+        </div>
+      </section>
+
+      <section id="scrollspyHeading3" class="mind"></section>
+      <section id="scrollspyHeading4" class="skill"></section>
+      <section id="scrollspyHeading5" class="port1"></section>
     </div>
   </body>
 </html>
