update my portfolio
add info content /
update detail

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -171,8 +171,19 @@
           </div>
           <div class="inner-box right-bottom flex-row">
             <div class="text-box">
-              <p>코딩을 프로그램을 창조하는 수단이라고 하지만</p>
-              <p></p>
+              <p>
+                저는 모르는 점을 단점이라 여기지 않고 탐구력으로 전환하여 열심히
+                공부하는 사람입니다.
+              </p>
+              <p>맡은 일에 끈기를 가지고 임하며,</p>
+              <p>
+                현재 html, css, js 의 웹 디자인 위주의 언어를 공부하고 있으며,
+                백엔드 과정도 공부하여 풀스택 개발자가 되는 것이 저의 꿈입니다.
+              </p>
+              <p>
+                저의 탐구력의 장점을 밀어붙혀 프론트엔드, 백엔드를 병행하는
+                과정에서 어느 한 쪽이 부족하지 않도록 열심히 할 것입니다.
+              </p>
             </div>
           </div>
         </div>
@@ -443,7 +454,33 @@
         </div>
         <div class="mind-inner">
           <h2>Mind set</h2>
-          <div class="content"></div>
+          <div class="content">
+            <div class="text-box t1 active">
+              <h2>Logic</h2>
+              <p>
+                코드를 구성할 때 항상 효율적으로 구성하려는 습관을 가지고
+                있습니다.
+              </p>
+              <p>최대한 간단하게, 필요한 로직만 사용하고, 다른 사람이 보기에</p>
+            </div>
+            <div class="text-box t2">
+              <h2>Modularize</h2>
+              <p>모듈화의 장점은 무궁무진하다고 생각합니다.</p>
+              <p>
+                특정 작업만 수행하는 코드를 개별로 구별하면 해당 작업의 오류
+                코드를 찾아서 수정하기 편하고, 다론 요소 간의 간섭을 덜 걱정할
+                수 있다
+              </p>
+            </div>
+            <div class="text-box t3">
+              <h2>Open Mind</h2>
+              <p>
+                항상 우물 안의 개구리라는 생각을 가지고 다른 사람이 구성한
+                코드를 참고합니다.
+              </p>
+              <p>외부 라이브러리를 적극 활용하</p>
+            </div>
+          </div>
           <div class="button-box">
             <div class="btn btn1">Logic</div>
             <div class="btn btn2">Module</div>
