update my portfolio
add skill section /
add moving bubble img in info section /
other details

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -53,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading2"
               ><div class="nav-shape color2"></div>
-              <p>Info</p></a
+              <p style="color: white">Info</p></a
             >
           </li>
           <li class="nav-item">
@@ -77,7 +77,9 @@
         </ul>
       </nav>
 
+      <!-- header, info, animations -->
       <div class="area">
+        <!-- animations -->
         <ul class="circles">
           <li></li>
           <li></li>
@@ -90,7 +92,6 @@
           <li></li>
           <li></li>
         </ul>
-
         <div class="air air1"></div>
         <div class="air air2"></div>
         <div class="air air3"></div>
@@ -103,8 +104,7 @@
             <div class="ani-block ani1"></div>
             <div class="ani-block ani2"></div>
             <div class="ani-block ani3"></div>
-            <!-- <div class="ani-block ani4"></div>
-          <div class="ani-block ani5"></div> -->
+            <div class="ani-block ani4"></div>
             <ul>
               <li>Home</li>
               <li>About</li>
@@ -127,71 +127,32 @@
                 <h2>Kim Gyeong Hyun</h2>
                 <p>e-mail : ******@naver.com</p>
                 <p>tel : 010 - **** - ****</p>
-                <p>https://github.com/KimGyeongHyun</p>
+                <p>
+                  <a href="https://github.com/KimGyeongHyun"
+                    >https://github.com/KimGyeongHyun</a
+                  >
+                </p>
               </div>
             </div>
             <div class="inner-box right-top">
-              <div class="ani-big-box">
-                <div class="lock1" data-aos="zoom-out" data-aos-duration="1000">
-                  <div class="ani-box ani1"></div>
-                </div>
-                <div
-                  class="lock2"
-                  data-aos="zoom-out"
-                  data-aos-anchor=".lock1"
-                  data-aos-delay="250"
-                  data-aos-duration="1000"
-                >
-                  <div class="ani-box ani2"></div>
-                </div>
-                <div
-                  class="lock3"
-                  data-aos="zoom-out"
-                  data-aos-anchor=".lock1"
-                  data-aos-delay="500"
-                  data-aos-duration="1000"
-                >
-                  <div class="ani-box ani3"></div>
-                </div>
-              </div>
+              <div class="main-img"></div>
             </div>
             <div class="inner-box left-bottom flex-row">
               <div class="img-box flex-row">
-                <div
-                  class="my-img img1"
-                  data-aos="fade-up"
-                  data-aos-anchor=".lock1"
-                  data-aos-delay="1000"
-                ></div>
-                <div
-                  class="my-img img2"
-                  data-aos="fade-up"
-                  data-aos-anchor=".lock1"
-                  data-aos-delay="1200"
-                ></div>
-                <div
-                  class="my-img img3"
-                  data-aos="fade-up"
-                  data-aos-anchor=".lock1"
-                  data-aos-delay="1400"
-                ></div>
+                <div class="my-img img1"></div>
+                <div class="my-img img2"></div>
+                <div class="my-img img3"></div>
               </div>
             </div>
             <div class="inner-box right-bottom flex-row">
               <div class="text-box">
+                <p>혼자 있는 것을 좋아하는 내향적인 취향입니다.</p>
                 <p>
-                  저는 모르는 점을 단점이라 여기지 않고 탐구력으로 전환하여
-                  열심히 공부하는 사람입니다.
-                </p>
-                <p>맡은 일에 끈기를 가지고 임하며,</p>
-                <p>
-                  현재 html, css, js 의 웹 디자인 위주의 언어를 공부하고 있으며,
-                  백엔드 과정도 공부하여 풀스택 개발자가 되는 것이 저의
-                  꿈입니다.
+                  피아노를 고등학생까지, 밴드에서 키보드를 현재까지 연주하고
+                  있습니다.
                 </p>
                 <p>
-                  저의 탐구력의 장점을 밀어붙혀 프론트엔드, 백엔드를 병행하는
-                  과정에서 어느 한 쪽이 부족하지 않도록 열심히 할 것입니다.
+                  소심하고 평소에 생각이 많기 때문에 소통이 조금 어렵습니다.
                 </p>
               </div>
             </div>
@@ -202,15 +163,33 @@
       <!-- skill -->
       <section id="scrollspyHeading3" class="skill">
         <div class="inner">
+          <h2>skill</h2>
           <div class="text-box">
-            <h2>skill</h2>
-            <p>html, css, js</p>
-            <div class="img-box">
-              <img src="../img/html.png" alt="icon" />
-              <img src="../img/css.png" alt="icon" />
-              <img src="../img/js.png" alt="icon" />
+            <div class="item-box">
+              <p>html, css, js</p>
+              <div class="img-box">
+                <img src="../img/html.png" alt="icon" />
+                <img src="../img/css.png" alt="icon" />
+                <img src="../img/js.png" alt="icon" />
+              </div>
             </div>
-            <p></p>
+
+            <div class="item-box rev">
+              <p>외부 라이브러리</p>
+              <div class="img-box">
+                <img src="../img/temp-swiper.png" alt="icon" />
+                <img src="../img/temp-fullpage.png" alt="icon" />
+              </div>
+            </div>
+
+            <div class="item-box">
+              <p>외부 라이브러리</p>
+              <div class="img-box">
+                <img src="../img/html.png" alt="icon" />
+                <img src="../img/css.png" alt="icon" />
+                <img src="../img/js.png" alt="icon" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
