update my portfolio
add design portfolio section /
update skill text /
other details

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -48,13 +48,13 @@
           <li class="nav-item">
             <a class="nav-link active" href="#scrollspyHeading1">
               <div class="nav-shape color1"></div>
-              <p style="color: white">Header</p>
+              <p style="color: #eeeeee">Header</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading2"
               ><div class="nav-shape color2"></div>
-              <p style="color: white">Info</p></a
+              <p style="color: #eeeeee">Info</p></a
             >
           </li>
           <li class="nav-item">
@@ -66,25 +66,31 @@
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading4"
               ><div class="nav-shape color4"></div>
-              <p style="color: white">Mind-Set</p></a
+              <p style="color: #eeeeee">Mind-Set</p></a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading5"
-              ><div class="nav-shape color1"></div>
+              ><div class="nav-shape color5"></div>
               <p>Portfolio #1</p></a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading6"
-              ><div class="nav-shape color1"></div>
+              ><div class="nav-shape color6"></div>
               <p>Portfolio #2</p></a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading7"
-              ><div class="nav-shape color1"></div>
+              ><div class="nav-shape color7"></div>
               <p>Portfolio #3</p></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading8"
+              ><div class="nav-shape color8"></div>
+              <p>Footer</p></a
             >
           </li>
         </ul>
@@ -159,14 +165,12 @@
             </div>
             <div class="inner-box right-bottom flex-row">
               <div class="text-box">
-                <p>혼자 있는 것을 좋아하는 내향적인 취향입니다.</p>
+                <p>혼자 있는 것을 좋아하는 극 I 성향 입니다</p>
                 <p>
-                  피아노를 고등학생까지, 밴드에서 키보드를 현재까지 연주하고
-                  있습니다.
+                  피아노를 고등학생까지 연주했고, 밴드에서 키보드를 현재까지
+                  연주하고 있습니다
                 </p>
-                <p>
-                  소심하고 평소에 생각이 많기 때문에 소통이 조금 어렵습니다.
-                </p>
+                <p>평소에 생각이 많아 혼자 고민에 빠지곤 합니다</p>
               </div>
             </div>
           </div>
@@ -478,30 +482,55 @@
                 코드를 구성할 때 항상 효율적으로 구성하려는 습관을 가지고
                 있습니다.
               </p>
-              <p>최대한 간단하게, 필요한 로직만 사용하고, 다른 사람이 보기에</p>
+              <p>
+                최대한 간단하게, 필요한 로직만 사용하고, 다른 사람이 보기에
+                단순하고 깔끔하게 구성하려고 노력합니다.
+              </p>
+              <p>
+                동일한 기능을 수행하는 컴포넌트가 여러개 있다면 코드를 두 번
+                작성하는 대신 함수를 작성하여 컴포넌트에 사용합니다.
+              </p>
             </div>
             <div class="text-box t2">
               <h2>Modularize</h2>
-              <p>모듈화의 장점은 무궁무진하다고 생각합니다.</p>
               <p>
-                특정 작업만 수행하는 코드를 개별로 구별하면 해당 작업의 오류
-                코드를 찾아서 수정하기 편하고, 다론 요소 간의 간섭을 덜 걱정할
-                수 있다
+                코드를 구성할 때 모듈화를 하지 않으면 다른 컴포넌트로간의 의도치
+                않은 동작을 할 수 있고, 정리되지 않은 코드로 인한 가독성 저하,
+                그에 따른 코드 수정이 어렵다고 생각합니다.
+              </p>
+              <p>
+                특정 작업만을 수행하는 코드를 개별로 구성하면 해당 작업의 오류
+                코드를 쉽게 찾아 수정하기 편하고, 다론 요소 간의 간섭을 덜
+                걱정할 수 있습니다.
+              </p>
+              <p>
+                건설로 비유하자면 모듈화는 건설 이전의 설계된 도면이라고
+                생각합니다. 전반적인 설계 없이 건물을 구성하면 금방 무너져 내릴
+                것입니다.
               </p>
             </div>
             <div class="text-box t3">
               <h2>Open Mind</h2>
               <p>
-                항상 우물 안의 개구리라는 생각을 가지고 다른 사람이 구성한
-                코드를 참고합니다.
+                코드를 혼자 작성하면 해당 언어가 금방 익숙해진다는 장점이
+                있습니다. 하지만 주변 도움 없이 혼자 코드를 작성하면 손쉽게
+                해결할 수 있는 문제점에 부딪혀 혼자 고민하게 됩니다.
               </p>
-              <p>외부 라이브러리를 적극 활용하</p>
+              <p>
+                또한 외부에서 코드를 참고할 때 다양하게 찾아보지 않는다면 좋은
+                코드를 찾지 못할 수 있습니다.
+              </p>
+              <p>
+                복잡한 기능이 구현된 유용한 외부 라이브러리들을 활용하면 기능을
+                직접 구현하는 시간을 줄일 수 있습니다. 필요한 기능이 있다면 해당
+                기능만 참고하여 사용할 수 있습니다.
+              </p>
             </div>
           </div>
           <div class="button-box">
-            <div class="btn btn1">Logic</div>
-            <div class="btn btn2">Module</div>
-            <div class="btn btn3">Open Mind</div>
+            <div class="btn btn1" style="color: white">Logic</div>
+            <div class="btn btn2" style="color: black">Module</div>
+            <div class="btn btn3" style="color: black">Open Mind</div>
 
             <div class="active-btn"></div>
           </div>
@@ -509,7 +538,10 @@
       </section>
       <script src="../js/mindButton.js"></script>
 
+      <!-- portfolio #1 -->
       <section id="scrollspyHeading5" class="port1">
+        <div class="deco1"></div>
+        <div class="deco2"></div>
         <div class="inner">
           <h2>Portfolio #1</h2>
           <div class="item-box">
@@ -519,14 +551,24 @@
             <div class="text-box">
               <h3>Anywhere 배달 회사</h3>
               <p>Swiper slide, AOS 외부 라이브러리</p>
-              <p>Tracking navigation</p>
+              <p>Side navigation</p>
               <p>반응형 웹 디자인</p>
-              <button type="button" class="btn btn-primary">Link</button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                onclick="location.href='../../anywhere/html/index.html'"
+              >
+                Link
+              </button>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- portfolio #2 -->
       <section id="scrollspyHeading6" class="port2">
+        <div class="deco1"></div>
+        <div class="deco2"></div>
         <div class="inner">
           <h2>Portfolio #2</h2>
           <div class="item-box rev">
@@ -539,12 +581,22 @@
               <p>상단 메뉴와 서브메뉴, mouse hover 디자인</p>
               <p>background 에 opacity 를 gradient 로 적용</p>
               <p>반응형 웹 디자인</p>
-              <button type="button" class="btn btn-primary">Link</button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                onclick="location.href='../../Dr_K/html/index.html'"
+              >
+                Link
+              </button>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- portfolio #3 -->
       <section id="scrollspyHeading7" class="port3">
+        <div class="deco1"></div>
+        <div class="deco2"></div>
         <div class="inner">
           <h2>Portfolio #3</h2>
           <div class="item-box">
@@ -555,12 +607,20 @@
               <h3>Easy Music 작곡 회사</h3>
               <p>Fullpage.js 외부 라이브러리</p>
               <p>active class 내부 태그에 애니메이션 적용</p>
-              <p>page 내에 slide, top 버튼</p>
-              <button type="button" class="btn btn-primary">Link</button>
+              <p>page 내에 slide / top 버튼</p>
+              <button
+                type="button"
+                class="btn btn-primary"
+                onclick="location.href='../../EasyMusic/html/index.html'"
+              >
+                Link
+              </button>
             </div>
           </div>
         </div>
       </section>
+
+      <section id="scrollspyHeading8" class="footer"></section>
       <script src="../js/videoStartCont.js"></script>
     </div>
 
